fixed show paramter for accordion, started expand/collapse all

--- a/styles/main.css
+++ b/styles/main.css
@@ -113,6 +113,16 @@
 
 /* course.php */
 
+/*
+.accordion-option .toggle-accordion:before {
+    content: "Expand All";
+}
+
+.accordion-option .toggle-accordion.active:before {
+    content: "Collapse All";
+}
+*/
+
 #courseOutline .card .card-header a {
     display: block;
 }
